# jkp-data-replication

./: .gitignore  HPC.knit.html  README.md  README_Fernando.txt  Timeline SAS-Python adaption.docx  WRDS_SQL_queries_Fernando.py  functions.py  main.py  prepare_comp_crsp_Fernando.py  pyproject.toml  recover.py  release_notes.html  requirements.txt  res_mom_code.py  submit_job.sh  submit_job_som_hpc.slurm  wrds_Fernando.py
Build_database/: aux_functions.py  main.py  wrds_jkp.py
code/: arnott_phase2_full_grid.py  arnott_strategy_master.py  aux_functions.py  check_div.py  factor_mom_arnott.py  factor_mom_backtest.py  main.py  portfolio.py  portfolio_USA_weights.py
codebase/: WRDS_SQL_queries_Fernando.py  readme.md  trial_full_run.py
documentation/: jkp_factors_migration.html  jkp_factors_migration.qmd  release_notes.html  release_notes.qmd
factor_momentum/: arnott_phase2_full_grid.py
jkp_replication/: main.py  portfolio.py  portfolio_USA_weights.py  wrds_credentials.py
old_code/: README_Fernando.txt  accounting_chars.py  call_roll_apply_daily.sh  functions.py  portfolios.py  prepare_comp_crsp_Fernando.py  readme.md  res_mom_code.py  roll_apply_daily.py  run_code.sh  trial_download.py  trial_full_run.py  wrds_jkp.py
release_notes_files/: jkp_factors_migration.qmd
slurm/: 1_jkp_replication.slurm  2_jkp_usa_weights.slurm  3_arnott_phase1.slurm  4_arnott_phase2.slurm  analyze_weights.slurm  arnott_lagged.slurm  arnott_phase2_full_grid.slurm  factor_mom_r.slurm  install_R_fix.slurm  jkp_backtest.slurm  jkp_factor_mom.slurm  jkp_portfolio_only.slurm  jkp_safe.slurm  (+5 more)
(+12 files in other folders)
