[project]
name = "jkp-factor-momentum"
version = "0.1.0"
description = "Python migration of the JKP (2023) factor pipeline + Arnott (2023) stock-level factor momentum extension"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime==5.4",
    "duckdb==1.4.3",
    "fastexcel>=0.16.0",
    "ibis-framework[duckdb,postgres]==11.0",
    "keyring==25.6.0",
    "keyrings-alt==5.0.2",
    "numpy==1.26.4",
    "polars==1.34.0",
    "polars-ds==0.10.2",
    "polars-ols==0.3.5",
    "pyarrow==16.1.0",
    "pycryptodomex==3.23.0",
    "sqlalchemy==1.4.49",
    "tqdm==4.66.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
]
